--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "jest": "^27.3.1",
     "lodash": "^4.17.21",
     "path": "^0.12.7",
+    "promisify": "^0.0.3",
     "supertest": "^6.1.6",
     "uuid": "^8.3.2"
   },
